Fixed video overflow-y

--- a/src/pages/HomePage/HomeVideo/HomeVideo.scss
+++ b/src/pages/HomePage/HomeVideo/HomeVideo.scss
@@ -7,6 +7,7 @@
     display: block;
     position: relative;
     width: 100%;
+    overflow-y: hidden;
   }
 
   .video_overlay {
